# Less-Is-More-for-AI-Autonomous-Agents

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXECUTIVE-SUMMARY.md  GLOSSARY.md  HANDOFF.md  INDEX.md  README.md  ROADMAP.md  SETUP.md  conftest.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
components/: 01-terminal-and-structured-tools.md  02-web-browser.md  03-desktop-vision-and-control.md  04-memory-with-teeth.md  05-stateful-agent-daemon.md  06-interactive-pty.md  07-audio-video-io.md  08-sandboxed-execution.md  09-credential-management.md  10-multi-agent-orchestration.md  11-implementation-roadmap.md  12-agent-framework-scorecard.md  13-deep-spec-highest-impact-component.md  14-personal-agent-stack.md  15-agentic-ai-wishlist.md
docs/: HUMAN-OPERATING-SYSTEM.md  SYSTEM-PROMPT.md
research/: EXECUTIVE-SUMMARY.md  INDEX.md  README.md
scripts/: hook-post-tool-call.py  hook-pre-compact.py  hook-pre-tool-call.py  hook-session-start.py  migrate-credentials.py  scan-secrets.sh  seed-rules.py
src/: __main__.py
tests/: test_audio.py  test_browser.py  test_capture_pin.py  test_credentials.py  test_daemon_events.py  test_daemon_service_digest.py  test_daemon_sources.py  test_daemon_state_loop.py  test_enforcement.py  test_integration.py  test_live_torture.py  test_memory_cli.py  test_memory_injector.py  test_memory_migrate.py  test_memory_store.py  test_orchestrator.py  test_pty.py  test_quality_gates.py  test_quick_wins.py  test_review_system.py  test_sandbox.py  test_seed_and_reasoning.py  test_verify.py  test_vision.py
(+62 files in other folders)
